...
        
    }()
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        
        accessibilityIdentifier = "userNotFoundView"
        translatesAutoresizingMaskIntoConstraints = false
    
        addSubview(textInfoLabel)
        addSubview(warningImgView)
        
        setUp()
...
