...
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    func setUp() {
        addTarget(self, action: #selector(gitUser), for: .touchUpInside)
        setTitle("Let's do some magic!", for: .normal)
        backgroundColor = nicePink
        setTitleColor(gray, for: .normal)
        titleLabel?.font = UIFont.systemFont(ofSize: 17)
        layer.shadowColor = nicePink.cgColor
        layer.shadowRadius = 5
        layer.shadowOpacity = 0.6
...
