...
}()

let userInput: UITextField = {
    
    //Changing color of font to lightPurple
    var placeHolder = NSMutableAttributedString()
    let phText = "Enter a username..."
    
    placeHolder = NSMutableAttributedString(string: phText)
    placeHolder.addAttribute(NSAttributedString.Key.foregroundColor, value: lightPurple, range: NSRange(location: 0, length: phText.count))
    
    let txtField = UITextField()
    txtField.attributedPlaceholder = placeHolder
...
